--- a/ZSözlük/appsettings.json
+++ b/ZSözlük/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=.\\SQLEXPRESS;database=ZSozlukDb;integrated security=true;"
+  },
   "AllowedHosts": "*"
 }
